// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure should render an image with alt text 1`] = `
<styled.figure>
  <Image
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
</styled.figure>
`;

exports[`Figure should render caption text 1`] = `
<styled.figure>
  <Image
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <Caption>
    This is a caption
  </Caption>
</styled.figure>
`;

exports[`Figure should render copyright text 1`] = `
<styled.figure>
  <Image
    alt="Map of the UK displaying Syrian refugees and asylum seekers per 10000 population. Ranges from 0 to 17."
    src="https://ichef.bbci.co.uk/news/640/cpsprodpb/439A/production/_100960371_syrians_and_asylum_v2-nc.png"
  />
  <VisuallyHiddenText>
    Copyright Getty images
  </VisuallyHiddenText>
</styled.figure>
`;
